--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
-
   <div id="app">
     <h1>get ready for some {{test}}</h1>
     <img :src="confucius" id="confucius" />
-
+    <!-- Create search bar below -->
+    <input v-on:input="dealWithInput"></input>
+    <button class="submit-button" @:click="dealWithClick">Get me a Haiku</button>
   </div>
 
   <script src="main.js"></script>
