line-spacing in poem

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
   <div id="app" v-cloak>
     <h1>get ready for some {{test}}</h1>
     <img :src="confucius" id="confucius" />
-    <main-search-bar @deal-with-search-click="dealWithSearchClick"></main-search-bar>
-    <div class="haiku-box"> 
-      <p v-show="mainHaiku !== ''"> {{mainHaiku}}  </p> 
-      </div>
+    <main-search-bar @deal-with-search-click="dealWithSearchClick"
+      @deal-with-random-click="dealWithRandomClick"></main-search-bar>
+    <div class="haiku-box">
+      <p class = "poem-styling" v-show="mainHaiku !== ''" > {{mainHaiku}} </p>
+    </div>
     <!--
       Something's not working with passing the props into this comp 
       <haiku-render-box v-show="mainHaiku !== ' '" :haikuBody="mainHaiku"></haiku-render-box> 
-    --> 
+    -->
   </div>
   <!-- 
     Trying to get module import/exports to work ... 
