--- a/index.html
+++ b/index.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vue App</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vue App</title>
+    <link rel="stylesheet" href="./assets/styles.css" />
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  </head>
 
-  <link rel="stylesheet" href="./assets/styles.css" />
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-</head>
-
-<body>
-  <div id="app" v-cloak>
-    <h1>get ready for some {{test}}</h1>
-    <img :src="confucius" id="confucius" />
-    <main-search-bar @deal-with-search-click="dealWithSearchClick"></main-search-bar>
-    <div class="haiku-box"> 
-      <p v-show="mainHaiku !== ''"> {{mainHaiku}}  </p> 
+  <body>
+    <div id="app" v-cloak>
+      <h1>get ready for some {{test}}</h1>
+      <img :src="confucius" id="confucius" />
+      <main-search-bar
+        @deal-with-search-click="dealWithSearchClick"
+      ></main-search-bar>
+      <div class="haiku-box">
+        <p v-show="mainHaiku !== ''">{{mainHaiku}}</p>
       </div>
-    <!--
-      Something's not working with passing the props into this comp 
-      <haiku-render-box v-show="mainHaiku !== ' '" :haikuBody="mainHaiku"></haiku-render-box> 
-    --> 
-  </div>
-  <!-- 
-    Trying to get module import/exports to work ... 
-    <script type="module">
-    import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-    createApp({
-      setup() {
-        const message = ref('Hello Vue!')
-        return {
-          message
-        }
-      }
-    })
-  </script>
-  -->
-  <script src="main.js"></script>
-  <script src="./components/mainSearchBar.js"></script>
-  <script src="./components/haikuRenderBox.js"></script>
+      <hannahs-component></hannahs-component>
+    </div>
 
-  <script>const mountedApp = app.mount("#app")</script>
-</body>
-
+    <script src="main.js"></script>
+    <script src="./components/mainSearchBar.js"></script>
+    <script src="./components/haikuRenderBox.js"></script>
+    <script src="./components/hannahsComponent.js"></script>
+    <script>
+      const mountedApp = app.mount("#app");
+    </script>
+  </body>
 </html>
