--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <main-search-bar @deal-with-search-click="dealWithSearchClick"
       @deal-with-random-click="dealWithRandomClick"></main-search-bar>
     <div class="haiku-box">
-      <p class = "poem-styling" v-show="mainHaiku !== ''" > {{mainHaiku}} </p>
+      <p class="poem-styling" v-show="mainHaiku !== ''"> {{mainHaiku}} </p>
     </div>
     <!--
-      Something's not working with passing the props into this comp 
-      <haiku-render-box v-show="mainHaiku !== ' '" :haikuBody="mainHaiku"></haiku-render-box> 
-    -->
-    <div> {{localTime}} </div>
+      Something's not working with passing the props into this comp -->
+    <haiku-render-box v-show="mainHaiku !== ''" :haikuBody="mainHaiku"></haiku-render-box>
+
   </div>
   <!-- 
     Trying to get module import/exports to work ... 
