--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue App</title>
-
     <link rel="stylesheet" href="./assets/styles.css" />
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
@@ -17,15 +16,10 @@
         @deal-with-search-click="dealWithSearchClick"
         @deal-with-random-click="dealWithRandomClick"
       ></main-search-bar>
-      <div class="haiku-box">
-        <p class="poem-styling" v-show="mainHaiku !== ''">{{mainHaiku}}</p>
-      </div>
-      <!--
-      Something's not working with passing the props into this comp 
-      <haiku-render-box v-show="mainHaiku !== ' '" :haikuBody="mainHaiku"></haiku-render-box> 
--->
+      <haiku-render-box :haiku-body="mainHaiku" ></haiku-render-box> 
       <hannahs-component></hannahs-component>
     </div>
+    
     <!-- 
     Trying to get module import/exports to work ... 
     <script type="module">
