--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
       Something's not working with passing the props into this comp 
       <haiku-render-box v-show="mainHaiku !== ' '" :haikuBody="mainHaiku"></haiku-render-box> 
 -->
-      <hannahs-component></hannahs-component>
-    </div>
+      <div>
+        <input-haiku @new-haiku-added="addHaiku"></input-haiku>
+      </div>
+      <div id=haikuList>
+        <ul id=hannahsHaikuList>
+          <li v-for="haiku in haikus" :key="haiku.id" id="hannahsLi">
+            <display-haiku :haiku-id="haiku.id" :haiku-name="haiku.name" :haiku-content="haiku.content"></display-haiku>
+          </li>
+        </ul>
+      </div>
     <!-- 
     Trying to get module import/exports to work ... 
     <script type="module">
@@ -43,7 +51,8 @@
     <script src="main.js"></script>
     <script src="./components/mainSearchBar.js"></script>
     <script src="./components/haikuRenderBox.js"></script>
-    <script src="./components/hannahsComponent.js"></script>
+    <script src="./components/displayHaiku.js"></script>
+    <script src="./components/inputHaiku.js"></script>
 
     <script>
       const mountedApp = app.mount("#app");
